--- a/src/style/index.less
+++ b/src/style/index.less
@@ -76,3 +76,11 @@ div:focus {
 .inlineBlock {
   display: block;
 }
+input,
+  textarea {
+
+    -webkit-appearance: none;
+    /*去除input默认样式*/
+
+}
+
